--- a/css/styless.css
+++ b/css/styless.css
@@ -58,14 +58,33 @@ img
         overflow: hidden;
         
  }
-.container
+ /* base styles smart phone*/
+
+ .container
 {
-        width: 1158px;
+        min-width: 320px;
+        max-width: 428px;
         margin-left: auto;
         margin-right: auto;
-        padding: 0 15px ;
+        padding: 0 16px;
+        
+      
+}
+@media screen and (min-width: 768px) {
+        .container{
+                max-width: 768px;
+        }
+        
+}
+@media screen and (min-width: 1158px) {
+        .container {
+                max-width: 1158px;
+                
+        }
 
 }
+
+
 .body
 {
         font-family: Roboto , sans-serif ;
@@ -348,8 +367,17 @@ Hero styless
 }
 .li-fotopeople
 {
+       
+        
+        
         background-color: #FFFFFF;
        
+}
+@media screen and (min-width: 768px){
+      .li-fotopeople{
+
+
+      }
 }
 .profession-list
 {
@@ -428,10 +456,34 @@ Hero styless
 
 .ul-fotopeople
 {
-        display: flex;
+        max-width: 428px;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 72px;
+        /* display: flex;
         justify-content: center;
-        gap: 24px;
+        gap: 24px; */
 }
+@media screen and (min-width: 768px) {
+        .ul-fotopeople {
+                flex-wrap: nowrap;
+                max-width: 768px;
+                flex-basis: calc((100% - 24px) /2);
+                
+                
+        }
+
+}
+@media screen and (min-width: 1158px){
+        .ul-fotopeopl{
+                max-width: 1158px;
+                justify-content: center;
+                gap: 24px;
+        }
+
+}
+
 .li-fotopeople{
         box-shadow: 
         0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -456,8 +508,21 @@ Hero styless
 .section-three
 {
         background-color: #F4F4FD;
-        padding: 120px 0;
+        padding: 96px;
+       
         
+}
+@media screen and (min-width: 768px) {
+        .section-three{
+        padding: 96px;
+        }
+
+}
+@media screen and (min-width: 1158px) {
+        .section-three {
+        padding: 120px;
+        }
+
 }
 
 .fotopeople
@@ -611,9 +676,25 @@ Hero styless
         padding-bottom: 120px;
  }
  .section-four{
-        padding-top: 120px;
-        padding-bottom: 120px;
+        padding-top: 96px;
+        padding-bottom: 96px;
+       
  }
+ @media screen and (min-width: 768px) {
+        .section-four {
+                padding-top: 96px;
+                padding-bottom: 96px;
+
+         }
+
+ }
+  @media screen and (min-width: 1158px) {
+          .section-four {
+                padding-top: 120px;
+                padding-bottom: 120px;
+          }
+  }
+
  /*========icons=======*/
 
 .container-div{
@@ -647,11 +728,29 @@ Hero styless
 
  .ul-customers
  {
+        max-width: 428px;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
-        gap: 24px;
-
+        align-items: center;
+        gap: 16px;
+       
  }
+  @media screen and (min-width: 768px) {
+    .ul-customers{
+        max-width: 768px;
+        gap: 24px;
+    }
+ }
+@media screen and (min-width: 1158px) {
+        .ul-customers {
+             
+        max-width: 1158px;
+        gap: 24px;
+      
+          }
+  }
+          
 .li-a-customers
 {
         display: flex;
@@ -683,12 +782,26 @@ Hero styless
 }
 .li-customers{
         
-        width: calc((100% - 120px) / 6);
-        height:88px;
+        margin-bottom: 70px;
+        flex-basis: calc((100%-16px) /2) ;
        
-      
-        
 }
+ @media screen and (min-width: 768px) {
+
+        .li-customers {
+                flex-basis: calc((100%-24px) /3);
+                }
+ }
+  @media screen and (min-width: 1158px) {
+
+          .li-customers {
+                flex-basis: calc((100% - 120px) / 6);
+                height: 88px;
+                        
+                        
+          }
+  }
+
 
 .ul-designer
 {
