--- a/css/styless.css
+++ b/css/styless.css
@@ -1299,6 +1299,7 @@ Hero styless
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 16px;
         
         
 }
