--- a/css/styless.css
+++ b/css/styless.css
@@ -635,7 +635,6 @@ Hero styless
         align-items: baseline;
         
         
-        
        
 }
 @media screen and (min-width: 768px) {
@@ -775,6 +774,7 @@ Hero styless
 {
         display: inline-block;
         margin-bottom: 16px;
+        margin-right: auto;
 }
 .footer
 
@@ -1667,7 +1667,6 @@ Hero styless
         .button-modal{
             
          
-        
         }
 }
 
@@ -1677,7 +1676,6 @@ Hero styless
 @media screen and (min-width: 768px) {
         .div-social {
                 
-
         }
 
 }
