--- a/css/styless.css
+++ b/css/styless.css
@@ -43,6 +43,8 @@ ol
 img
 {
         display: block;
+        max-width: 100%;
+        height: auto;
 }
  .visually-hidden 
  {
@@ -692,6 +694,7 @@ Hero styless
         flex-direction: column;
         align-items: center;
         
+        
         gap: 72px;
         text-align: center;
         
@@ -739,6 +742,7 @@ Hero styless
         align-items: center;
         flex-direction: column;
         gap: 72px;
+        margin: 0 auto;
               
 
 }
