--- a/css/styless.css
+++ b/css/styless.css
@@ -64,7 +64,6 @@ img
 
  .container
 {
-        min-width: 320px;
         max-width: 428px;
         margin-left: auto;
         margin-right: auto;
@@ -82,7 +81,7 @@ img
 @media screen and (min-width: 1158px) {
         .container {
                 max-width: 1158px;
-                padding: 0 ;
+                
                 
                 
         }
@@ -170,8 +169,27 @@ img
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color:var(--color3);
-        margin-right: 76px;
+        padding-top: 26px ;
+        padding-bottom: 24px;
+        
+
 }
+@media screen and (min-width: 768px) {
+        .logo {
+                margin-right: 76px;
+
+              
+        }
+}
+
+@media screen and (min-width: 1158px) {
+        .logo{
+                
+
+      
+        }
+}
+
 .link-list
 {
         display: none;
@@ -320,8 +338,8 @@ img
 }
 .solutions 
 {
-
-        font-size: 56px;
+        
+        font-size: 36px;
         line-height: 1.07;
         text-align: center;
         letter-spacing: 0.02em;
@@ -330,7 +348,17 @@ img
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 48px;
+
         
+}
+@media screen and (min-width: 768px) {
+        .solutions {
+        font-size: 56px;
+        }
+}
+
+@media screen and (min-width: 1158px) {
+        .solutions {}
 }
 
 .hero-section
@@ -342,13 +370,36 @@ img
         padding-top: 112px;
         padding-bottom: 112px;
 
-       
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                                rgba(46, 47, 66, 0.7)),url(../images/hero/hero.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+
+        background-image: 
+        linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)), 
+        url(../images/hero/hero-mobile.jpg);
 }
+@media screen and (min-width: 428px){
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-mobile.jpg);
+        }
+
+}
+
+@media screen and (min-width: 767px){
+        background-image :linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero/hero-desctop.jpg);
+        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-desctop-second.jpg);
+        }
+
+}
+@media screen and (min-width: 1158px){
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-all.jpg);
+        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+                        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-all-second.jpg);
+                }
+
+}
+
 @media screen and (min-width: 768px) {
         .hero-section {}
 }
@@ -421,7 +472,7 @@ Hero styless
 {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        
         justify-content: center;
         gap: 72px;
 
@@ -472,7 +523,7 @@ Hero styless
 {
         color: #434455;
         
-               
+        text-align: left;
         font-family: Roboto;
         font-size: 16px;
         font-style: normal;
@@ -484,6 +535,10 @@ Hero styless
 }
 @media screen and (min-width: 768px) {
         .message {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 96px 24px;
                 
                 
                 
@@ -494,7 +549,7 @@ Hero styless
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 8px;
+        gap: 24px;
         
         color: #434455;
         
@@ -521,7 +576,9 @@ Hero styless
         
 }
 @media screen and (min-width: 768px) {
-        .overview {}
+        .overview {
+                text-align: left;
+        }
 }
 
 @media screen and (min-width: 1158px) {
@@ -661,7 +718,7 @@ Hero styless
 }
 .footer-incris
 {
-        
+        text-align: left;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
@@ -706,7 +763,7 @@ Hero styless
                 flex-wrap: wrap;
                 flex-direction: row;
                 text-align: start;
-                gap: 24px;
+                gap: 72px 24px;
                 
          
         }
@@ -717,10 +774,6 @@ Hero styless
         .div-footer {
                 display: flex;
                 flex-wrap: nowrap;
-                gap: 80px;
-                
-
-
                 
         }
 
@@ -827,7 +880,6 @@ Hero styless
         padding-bottom: 96px;
         text-align: center;
         
-
         background-color:#2e2f42;
        
 }
@@ -1099,7 +1151,7 @@ Hero styless
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        gap: 16px;
+        gap: 72px 16px;
        
  }
   @media screen and (min-width: 768px) {
@@ -1111,6 +1163,8 @@ Hero styless
  }
 @media screen and (min-width: 1158px) {
         .ul-customers {
+             flex-wrap: nowrap;
+             gap: 24px;
              
           }
   }
@@ -1363,7 +1417,7 @@ Hero styless
 @media screen and (min-width: 1158px) {
         .subscribe-form {
         
-                gap: 24px;
+                margin-left: auto;
         }
 }
 .subscribe-form-input{
@@ -1545,9 +1599,28 @@ Hero styless
         align-items: center;
         stroke: rgba(46, 47, 66, 1);
 }
+.toggle-black{
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: #e7e9fc;
+        cursor: pointer;
+        color: color;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .menu-toggle {
-        min-height: 32px;
-        min-width: 22px;
+
+        min-height: 24px;
+        min-width: 24px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1559,6 +1632,8 @@ Hero styless
         border: none;
         border-radius: 50%;
         outline: none;
+        
+       
 }
 
 @media (min-width: 768px) {
@@ -1579,8 +1654,8 @@ Hero styless
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100vh;
-        padding: 80px 40px 35pc 40px;
+        height: 100%;
+        padding: 80px 40px 35px 40px;
         background-color: #FFF;
         z-index: 999;
 
@@ -1642,8 +1717,6 @@ Hero styless
         text-transform: capitalize;
         
         
-        
-        
 }
 .address-link-mailo{
         color: var(--slate, #434455);
@@ -1660,6 +1733,7 @@ Hero styless
         display: inline-flex;
         flex-direction: column;
         align-items: flex-start;
+        margin-bottom: auto;
         gap: 40px;
 }
 .ul-designer-modal{
@@ -1680,9 +1754,7 @@ Hero styless
 .ul-designer-modal{
         gap: 56px;
 }
-.link-list-modal{
-        padding-top: 284px;
-}
+
 .button-modal{
         font-family: Roboto, sans-serif;
                 font-weight: 500;
@@ -1728,3 +1800,86 @@ Hero styless
 @media screen and (min-width: 1158px) {
         .div-social {}
 }
+.defolt-class{
+        width: 428px;
+
+}
+@media screen and (min-width: 768px) {
+        .defolt-class {
+                width: 552px;
+        }
+
+}
+
+@media screen and (min-width: 1158px) {
+        .defolt-class{
+                width: 1440px;
+        }
+}
+.defolt-footer{
+        width: 428px;
+}
+@media screen and (min-width: 768px) {
+        .defolt-footer{
+        width: 552px;
+        }
+
+}
+
+@media screen and (min-width: 1158px) {
+        .defolt-footer {
+                width: 1440px;
+        }
+}
+.div-text-second{
+        width: 428px;
+
+}
+@media screen and (min-width: 768px) {
+        .div-text-second {
+                width: 768px;
+                
+        }
+
+}
+
+@media screen and (min-width: 1158px) {
+        .div-text-second{
+                width: 1440px;
+                
+                
+        }
+}
+.modal-window-div{
+        width: 392px;
+        height: 584px;
+}
+@media screen and (min-width: 768px) {
+        .modal-window-div {
+                width: 408px;
+                height: 584px;
+
+        }
+
+}
+
+@media screen and (min-width: 1158px) {
+        .modal-window-div {
+                
+        }
+}
+/* .container-width{
+        width: 428px;
+}
+@media screen and (min-width: 768px) {
+        .container-width {
+                width: 552px;
+        }
+
+}
+
+@media screen and (min-width: 1158px) {
+        .container-width {
+                width: 1440px;
+        }
+} */
