--- a/css/styless.css
+++ b/css/styless.css
@@ -202,6 +202,7 @@ img
                 flex-direction: column;
                 justify-content: center;
                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                
         }
 }
 
@@ -291,10 +292,28 @@ img
 {
  margin-right: 0px;
 }
+
 .list-mailo
 {
  margin-right: 40px;
 }
+.size-link{
+
+}
+@media screen and (min-width: 768px) {
+        .size-link {
+                font-size: 12px;
+               
+   
+        }
+}
+
+@media screen and (min-width: 1158px) {
+        .size-link {
+      
+        }
+}
+
 .address
 {
         font-style: normal;
